<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.kollhong.accounts3.Settings_View$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.kollhong.accounts3.Settings_View$CategorySettingsActivity"
        android:icon="@drawable/ic_category"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.kollhong.accounts3.Settings_View$AssetSettingsActivity"
        android:icon="@drawable/ic_accounts"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
