<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/add_tran_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remittance" />
        </android.support.design.widget.TabLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.kollhong.accounts3.w_Add_Tran">

            <TextView
                android:id="@+id/add_acc_cat"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/category"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/time_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_acc_cat" />

            <TextView
                android:id="@+id/add_acc_name"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/amount_usage"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/add_acc_with_acc"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/account"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_acc_name" />

            <TextView
                android:id="@+id/add_acc_nick"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/recipient"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_acc_with_acc" />

            <TextView
                android:id="@+id/acc_acc_note"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/note"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_acc_nick" />

            <TextView
                android:id="@+id/add_acc_bal"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/reward"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acc_acc_note" />

            <TextView
                android:id="@+id/add_tran_time"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onDatePick"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/add_tran_amount"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="number|numberSigned"
                android:labelFor="@+id/add_acc_name"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/add_acc_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/add_tran_recipient"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:labelFor="@+id/add_acc_nick"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/add_acc_nick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/acc_acc_note_txt"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:labelFor="@+id/acc_acc_note"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/acc_acc_note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/cat_view"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onCategoryClick"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/add_acc_cat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <TextView
                android:id="@+id/add_acc_bal_txt"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="onAccountClick"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/add_acc_with_acc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <Spinner
                android:id="@+id/add_acc_with_acc_spin"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/add_acc_bal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.292"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/acc_acc_note_txt" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/Learn_Checker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:checked="true"
                android:text="@string/text_learn_checker"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acc_acc_note_txt" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
