<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="48dp"
                                             android:background="?attr/selectableItemBackground"
                                             android:clickable="true"
                                             android:padding="4dp"
                                             android:focusable="true"
                                             android:baselineAligned="false">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/list_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/category"
                android:maxLines="1"
                android:padding="0dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/list_cat2nd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/category_sub"
                android:maxLines="1"
                android:padding="0dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"/>

    </LinearLayout>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintGuide_percent="0.2"/>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/list_reci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/recipient"
                android:maxLines="1"
                android:padding="0dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

        <TextView
                android:id="@+id/list_accounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/account"
                android:maxLines="1"
                android:padding="0dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"/>

    </LinearLayout>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="850dp"
            app:layout_constraintGuide_percent="0.8"/>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/list_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical|end"
                android:hint="@string/amount_usage"
                android:padding="0dp"
                android:singleLine="true"
                android:textAlignment="viewEnd"
                android:textSize="18sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>